# Videogame-SQL-Search---Rust-Actix-Microservice-with-AWS-RDS

./: README.md
vgex/: Cargo.toml  lib.rs  lib2.rs
vgex/src/: main.rs
videogame/: Cargo.toml
videogame/src/: main.rs
