[package]
name = "vgex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polodb_core = "4.4.0"
sea-orm = "0.12.14"
sqlx = { version = "0.7.3", features = ["postgres"] } 
futures = "0.3.30"
serde = "1.0.197"
reqwest = {version = "0.11.24", features = ["blocking"]}
csv = "1.3.0"
serde_json = "1.0.114"
